--- a/pizza/src/App.css
+++ b/pizza/src/App.css
@@ -22,6 +22,24 @@
   font-size: large;
 }
 
+div {
+  padding: 25px;
+}
+
+.welcome {
+      color: red;
+      background-color: #04B404;
+      border: 1px solid transparent;
+      border-color: black;
+      text-shadow: 2px 2px grey;
+      text-align: center;
+      font-size: 28px;
+      padding: 25px
+}
+
+.pizzaConfig {
+    background-image:url(https://i.ytimg.com/vi/C1j0EmITLgk/maxresdefault.jpg)
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
